Add button to view documents and studies

--- a/historia-salud.html
+++ b/historia-salud.html
@@ -443,6 +443,10 @@
         onclick="window.location.href='historia-clinica-completa.html'">
   Ver Historia Clínica Completa
 </button>
+        <button class="button-primary" onclick="window.location.href='documentos-estudios.html'">
+  Ver documentos y estudios
+</button>
+
 
       </section>
 
