Add button to view documents and studies
<div style="margin:10px 0 18px;">
  <button 
    onclick="window.location.href='documentos-estudios.html'" 
    style="
      padding:10px 14px;
      border-radius:14px;
      background:#eef2ff;
      color:#1d4ed8;
      border:1px solid #c7d7ff;
      font-size:13px;
      font-weight:500;
      cursor:pointer;
      width:100%;
      text-align:center;
    ">
    Ver documentos y estudios
  </button>
</div>

--- a/historia-clinica-completa.html
+++ b/historia-clinica-completa.html
@@ -336,6 +336,25 @@
         <div class="back-btn" onclick="history.back()">‹</div>
         <div class="header-title">Historia Clínica Completa</div>
       </div>
+      <div style="margin:10px 0 18px;">
+  <button 
+    onclick="window.location.href='documentos-estudios.html'" 
+    style="
+      padding:10px 14px;
+      border-radius:14px;
+      background:#eef2ff;
+      color:#1d4ed8;
+      border:1px solid #c7d7ff;
+      font-size:13px;
+      font-weight:500;
+      cursor:pointer;
+      width:100%;
+      text-align:center;
+    ">
+    Ver documentos y estudios
+  </button>
+</div>
+
     </header>
 
     <main class="card">
