--- a/historia-clinica-completa.html
+++ b/historia-clinica-completa.html
@@ -337,6 +337,14 @@
         <div class="header-title">Historia Clínica Completa</div>
       </div>
       <div style="margin:10px 0 18px;">
+ 
+</div>
+
+    </header>
+</header>
+
+<!-- ✅ PEGAR EL BOTÓN ACÁ -->
+<div style="margin:10px 0 18px;">
   <button 
     onclick="window.location.href='documentos-estudios.html'" 
     style="
@@ -354,8 +362,9 @@
     Ver documentos y estudios
   </button>
 </div>
+<!-- ⬆ ESTE ES EL LUGAR CORRECTO ⬆ -->
 
-    </header>
+<main class="card">
 
     <main class="card">
       <!-- FILTROS -->
