--- a/historia-clinica-completa.html
+++ b/historia-clinica-completa.html
@@ -47,284 +47,277 @@
   background: linear-gradient(135deg, var(--blue-dark), var(--blue-main));
   color: #fff;
   border-radius: 22px;
-  padding: 6px 14px 12px; /* ← Ultra compacto */
+  padding: 6px 14px 12px;
   overflow: hidden;
   box-shadow: 0 10px 22px rgba(15, 23, 42, 0.35);
 }
 
-
-    .header::before {
-      content: "";
-      position: absolute;
-      width: 180%;
-      height: 180%;
-      border-radius: 50%;
-      background: radial-gradient(circle at top, rgba(255, 255, 255, 0.18), transparent 60%);
-      top: -70%;
-      left: -40%;
-      opacity: 0.9;
-    }
+.header::before {
+  content: "";
+  position: absolute;
+  width: 180%;
+  height: 180%;
+  border-radius: 50%;
+  background: radial-gradient(circle at top, rgba(255, 255, 255, 0.18), transparent 60%);
+  top: -70%;
+  left: -40%;
+  opacity: 0.9;
+}
 
 .header-row {
   display: flex;
   align-items: center;
   gap: 8px;
-  padding-top: 2px;  /* ↓ Ajuste fino */
+  padding-top: 2px;
   padding-bottom: 2px;
   z-index: 2;
 }
 
+.back-btn {
+  width: 30px;
+  height: 30px;
+  border-radius: var(--radius-pill);
+  border: 1px solid rgba(255, 255, 255, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+  cursor: pointer;
+  background: rgba(15, 23, 42, 0.18);
+  backdrop-filter: blur(10px);
+}
 
-    .back-btn {
-      width: 30px;
-      height: 30px;
-      border-radius: var(--radius-pill);
-      border: 1px solid rgba(255, 255, 255, 0.6);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 18px;
-      cursor: pointer;
-      background: rgba(15, 23, 42, 0.18);
-      backdrop-filter: blur(10px);
-    }
+.header-title {
+  font-size: 19px;
+  font-weight: 600;
+}
 
-    .header-title {
-      font-size: 19px;
-      font-weight: 600;
-    }
-
-    /* CARD PRINCIPAL */
+/* CARD PRINCIPAL */
 
 .card {
-  margin-top: -10px; /* ahora lo ajustamos, ver punto 2 */
+  margin-top: -10px;
   background: #ffffff;
   border-radius: var(--radius-lg);
   padding: 16px 16px 20px;
   box-shadow: 0 12px 30px rgba(15, 23, 42, 0.14);
-  /* ELIMINÁ estas dos líneas:
-     max-height: calc(100vh - 90px);
-     overflow-y: auto;
-  */
 }
 
+.section {
+  margin-bottom: 16px;
+}
 
-    .section {
-      margin-bottom: 16px;
-    }
+.section-label {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 6px;
+  color: var(--text-main);
+}
 
-    .section-label {
-      font-size: 14px;
-      font-weight: 600;
-      margin-bottom: 6px;
-      color: var(--text-main);
-    }
+.hint {
+  font-size: 12px;
+  color: var(--text-soft);
+}
 
-    .hint {
-      font-size: 12px;
-      color: var(--text-soft);
-    }
+/* FILTROS */
 
-    /* FILTROS */
+.filters {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 10px;
+}
 
-    .filters {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      margin-bottom: 10px;
-    }
+.input-text,
+.select-field {
+  padding: 9px 10px;
+  border-radius: 12px;
+  border: 1px solid var(--border-soft);
+  font-size: 13px;
+  outline: none;
+  background: #f9fafb;
+  color: var(--text-main);
+  min-width: 0;
+}
 
-    .input-text,
-    .select-field {
-      padding: 9px 10px;
-      border-radius: 12px;
-      border: 1px solid var(--border-soft);
-      font-size: 13px;
-      outline: none;
-      background: #f9fafb;
-      color: var(--text-main);
-      min-width: 0;
-    }
+.input-text:focus,
+.select-field:focus {
+  border-color: var(--blue-main);
+  box-shadow: 0 0 0 1px rgba(37, 99, 235, 0.28);
+  background: #fff;
+}
 
-    .input-text:focus,
-    .select-field:focus {
-      border-color: var(--blue-main);
-      box-shadow: 0 0 0 1px rgba(37, 99, 235, 0.28);
-      background: #fff;
-    }
+.filters .input-text {
+  flex: 1 1 100%;
+}
 
-    .filters .input-text {
-      flex: 1 1 100%;
-    }
+.filters .select-field {
+  flex: 1 1 calc(50% - 4px);
+}
 
-    .filters .select-field {
-      flex: 1 1 calc(50% - 4px);
-    }
+/* TOGGLE SENSIBLES */
 
-    /* TOGGLE SENSIBLES */
+.toggle-row {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-top: 6px;
+}
 
-    .toggle-row {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      margin-top: 6px;
-    }
+.toggle {
+  position: relative;
+  width: 40px;
+  height: 22px;
+}
 
-    .toggle {
-      position: relative;
-      width: 40px;
-      height: 22px;
-    }
+.toggle input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-    .toggle input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
+.slider {
+  position: absolute;
+  cursor: pointer;
+  inset: 0;
+  background-color: #d1d5db;
+  border-radius: 999px;
+  transition: 0.2s;
+}
 
-    .slider {
-      position: absolute;
-      cursor: pointer;
-      inset: 0;
-      background-color: #d1d5db;
-      border-radius: 999px;
-      transition: 0.2s;
-    }
+.slider::before {
+  content: "";
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  left: 3px;
+  top: 3px;
+  background-color: #fff;
+  border-radius: 50%;
+  transition: 0.2s;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+}
 
-    .slider::before {
-      content: "";
-      position: absolute;
-      height: 16px;
-      width: 16px;
-      left: 3px;
-      top: 3px;
-      background-color: #fff;
-      border-radius: 50%;
-      transition: 0.2s;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
-    }
+.toggle input:checked + .slider {
+  background-color: var(--blue-main);
+}
 
-    .toggle input:checked + .slider {
-      background-color: var(--blue-main);
-    }
+.toggle input:checked + .slider::before {
+  transform: translateX(16px);
+}
 
-    .toggle input:checked + .slider::before {
-      transform: translateX(16px);
-    }
+.toggle-text {
+  font-size: 12px;
+  color: var(--text-soft);
+}
 
-    .toggle-text {
-      font-size: 12px;
-      color: var(--text-soft);
-    }
+/* TIMELINE */
 
-    /* TIMELINE COMPLETA */
+.timeline {
+  position: relative;
+  margin-top: 8px;
+  padding-left: 14px;
+}
 
-    .timeline {
-      position: relative;
-      margin-top: 8px;
-      padding-left: 14px;
-    }
+.timeline::before {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: 5px;
+  bottom: 4px;
+  width: 2px;
+  background: #e5e7eb;
+}
 
-    .timeline::before {
-      content: "";
-      position: absolute;
-      top: 4px;
-      left: 5px;
-      bottom: 4px;
-      width: 2px;
-      background: #e5e7eb;
-    }
+.timeline-item {
+  position: relative;
+  padding-left: 12px;
+  margin-bottom: 14px;
+  border-radius: 12px;
+  padding-bottom: 10px;
+  padding-top: 8px;
+  background: #f9fafb;
+}
 
-    .timeline-item {
-      position: relative;
-      padding-left: 12px;
-      margin-bottom: 14px;
-      border-radius: 12px;
-      padding-bottom: 10px;
-      padding-top: 8px;
-      background: #f9fafb;
-    }
+.timeline-dot {
+  position: absolute;
+  left: -2px;
+  top: 10px;
+  width: 10px;
+  height: 10px;
+  border-radius: 999px;
+  background: #ffffff;
+  border: 2px solid var(--blue-main);
+}
 
-    .timeline-dot {
-      position: absolute;
-      left: -2px;
-      top: 10px;
-      width: 10px;
-      height: 10px;
-      border-radius: 999px;
-      background: #ffffff;
-      border: 2px solid var(--blue-main);
-    }
+.timeline-header {
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
+  margin-bottom: 2px;
+}
 
-    .timeline-header {
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
-      margin-bottom: 2px;
-    }
+.timeline-date {
+  font-size: 12px;
+  font-weight: 600;
+  color: var(--text-main);
+}
 
-    .timeline-date {
-      font-size: 12px;
-      font-weight: 600;
-      color: var(--text-main);
-    }
+.badge-tipo {
+  font-size: 11px;
+  padding: 3px 8px;
+  border-radius: var(--radius-pill);
+  background: #e5f0ff;
+  color: var(--blue-dark);
+  white-space: nowrap;
+}
 
-    .badge-tipo {
-      font-size: 11px;
-      padding: 3px 8px;
-      border-radius: var(--radius-pill);
-      background: #e5f0ff;
-      color: var(--blue-dark);
-      white-space: nowrap;
-    }
+.timeline-sub {
+  font-size: 12px;
+  color: var(--text-soft);
+  margin-bottom: 4px;
+}
 
-    .timeline-sub {
-      font-size: 12px;
-      color: var(--text-soft);
-      margin-bottom: 4px;
-    }
+.timeline-text {
+  font-size: 12px;
+  color: var(--text-main);
+  margin-bottom: 6px;
+}
 
-    .timeline-text {
-      font-size: 12px;
-      color: var(--text-main);
-      margin-bottom: 6px;
-    }
+.chip-row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 6px;
+}
 
-    .chip-row {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-    }
+.chip {
+  font-size: 11px;
+  padding: 3px 7px;
+  border-radius: var(--radius-pill);
+  background: #e5e7eb;
+  color: #111827;
+}
 
-    .chip {
-      font-size: 11px;
-      padding: 3px 7px;
-      border-radius: var(--radius-pill);
-      background: #e5e7eb;
-      color: #111827;
-    }
+.chip-blue {
+  background: var(--blue-soft);
+  color: var(--blue-dark);
+}
 
-    .chip-blue {
-      background: var(--blue-soft);
-      color: var(--blue-dark);
-    }
+.chip-red {
+  background: #fee2e2;
+  color: #b91c1c;
+}
 
-    .chip-red {
-      background: #fee2e2;
-      color: #b91c1c;
-    }
+.chip-muted {
+  background: #e5e7eb;
+  color: #6b7280;
+}
 
-    .chip-muted {
-      background: #e5e7eb;
-      color: #6b7280;
-    }
+.muted-text {
+  font-size: 12px;
+  color: #9ca3af;
+}
 
-    .muted-text {
-      font-size: 12px;
-      color: #9ca3af;
-    }
-
-    .clickable {
+.clickable {
   cursor: pointer;
   transition: background 0.15s;
 }
@@ -337,19 +330,15 @@
 </head>
 <body>
   <div class="app-shell">
+
     <header class="header">
       <div class="header-row">
         <div class="back-btn" onclick="history.back()">‹</div>
         <div class="header-title">Historia Clínica Completa</div>
       </div>
-      <div style="margin:10px 0 18px;">
- 
-</div>
-
     </header>
-</header>
 
-<!-- ✅ PEGAR EL BOTÓN ACÁ -->
+<!-- BOTÓN CORRECTAMENTE UBICADO -->
 <div style="margin:10px 0 18px;">
   <button 
     onclick="window.location.href='documentos-estudios.html'" 
@@ -368,11 +357,9 @@
     Ver documentos y estudios
   </button>
 </div>
-<!-- ⬆ ESTE ES EL LUGAR CORRECTO ⬆ -->
 
 <main class="card">
 
-    <main class="card">
       <!-- FILTROS -->
       <section class="section">
         <div class="section-label">Filtros</div>
@@ -420,7 +407,7 @@
         </div>
 
         <div class="timeline" id="timeline">
-          <!-- Ejemplos de registros -->
+
           <div class="timeline-item clickable"
      onclick="window.location.href='detalle-registro.html'"
      data-tipo="consulta"
@@ -444,7 +431,10 @@
             </div>
           </div>
 
-          <div class="timeline-item" data-tipo="laboratorio" data-sensible="no" data-texto="laboratorio glucemia perfil lipidico diabetes">
+          <div class="timeline-item"
+     data-tipo="laboratorio"
+     data-sensible="no"
+     data-texto="laboratorio glucemia perfil lipidico diabetes">
             <div class="timeline-dot"></div>
             <div class="timeline-header">
               <div class="timeline-date">03/03/2024</div>
@@ -463,7 +453,10 @@
             </div>
           </div>
 
-          <div class="timeline-item" data-tipo="guardia" data-sensible="si" data-texto="crisis angustia guardia salud mental panico">
+          <div class="timeline-item"
+     data-tipo="guardia"
+     data-sensible="si"
+     data-texto="crisis angustia guardia salud mental panico">
             <div class="timeline-dot"></div>
             <div class="timeline-header">
               <div class="timeline-date">18/02/2024</div>
@@ -483,7 +476,10 @@
             </div>
           </div>
 
-          <div class="timeline-item" data-tipo="imagen" data-sensible="no" data-texto="radiografia torax imagen">
+          <div class="timeline-item"
+     data-tipo="imagen"
+     data-sensible="no"
+     data-texto="radiografia torax imagen">
             <div class="timeline-dot"></div>
             <div class="timeline-header">
               <div class="timeline-date">10/01/2024</div>
@@ -500,7 +496,10 @@
             </div>
           </div>
 
-          <div class="timeline-item" data-tipo="receta" data-sensible="no" data-texto="receta metformina hipertension losartan">
+          <div class="timeline-item"
+     data-tipo="receta"
+     data-sensible="no"
+     data-texto="receta metformina hipertension losartan">
             <div class="timeline-dot"></div>
             <div class="timeline-header">
               <div class="timeline-date">05/12/2023</div>
@@ -516,33 +515,36 @@
               <span class="chip chip-muted">Tratamiento crónico</span>
             </div>
           </div>
+
         </div>
       </section>
+
     </main>
   </div>
 
-  <script>
-    function filtrar() {
-      const texto = document.getElementById("buscador").value.toLowerCase();
-      const tipo = document.getElementById("filtroTipo").value;
-      const mostrarSensibles = document.getElementById("toggleSensibles").checked;
+<script>
+function filtrar() {
+  const texto = document.getElementById("buscador").value.toLowerCase();
+  const tipo = document.getElementById("filtroTipo").value;
+  const mostrarSensibles = document.getElementById("toggleSensibles").checked;
 
-      const items = document.querySelectorAll("#timeline .timeline-item");
+  const items = document.querySelectorAll("#timeline .timeline-item");
 
-      items.forEach((item) => {
-        const t = item.dataset.tipo;
-        const s = item.dataset.sensible === "si";
-        const fullText = item.dataset.texto || "";
+  items.forEach((item) => {
+    const t = item.dataset.tipo;
+    const s = item.dataset.sensible === "si";
+    const fullText = item.dataset.texto || "";
 
-        let visible = true;
+    let visible = true;
 
-        if (tipo !== "todos" && t !== tipo) visible = false;
-        if (!mostrarSensibles && s) visible = false;
-        if (texto && !fullText.includes(texto)) visible = false;
+    if (tipo !== "todos" && t !== tipo) visible = false;
+    if (!mostrarSensibles && s) visible = false;
+    if (texto && !fullText.includes(texto)) visible = false;
 
-        item.style.display = visible ? "block" : "none";
-      });
-    }
-  </script>
+    item.style.display = visible ? "block" : "none";
+  });
+}
+</script>
+
 </body>
 </html>
