--- a/detalle-registro.html
+++ b/detalle-registro.html
@@ -94,13 +94,14 @@
 
     /* CARD PRINCIPAL (unificada) */
 
-    .card {
-      margin-top: -10px;
-      background: #ffffff;
-      border-radius: var(--radius-lg);
-      padding: 16px 16px 20px;
-      box-shadow: 0 12px 30px rgba(15, 23, 42, 0.14);
-    }
+ .card {
+  margin-top: 8px; /* o 10 si querés un poco más de aire */
+  background: #ffffff;
+  border-radius: var(--radius-lg);
+  padding: 16px 16px 20px;
+  box-shadow: 0 12px 30px rgba(15, 23, 42, 0.14);
+}
+
 
     .section {
       margin-bottom: 16px;
