--- a/solicitar-turno.html
+++ b/solicitar-turno.html
@@ -40,17 +40,19 @@
       max-width: 430px;
       min-height: 100vh;
       position: relative;
-      padding: 16px 16px 32px;
+      padding: 14px 14px 24px;
     }
+
+    /* HEADER compacto, alineado al resto */
 
     .header {
       position: relative;
       background: linear-gradient(135deg, var(--blue-dark), var(--blue-main));
       color: #ffffff;
-      border-radius: 32px;
-      padding: 18px 18px 36px;
+      border-radius: 22px;
+      padding: 6px 14px 12px;
       overflow: hidden;
-      box-shadow: 0 10px 30px rgba(15, 23, 42, 0.3);
+      box-shadow: 0 10px 22px rgba(15, 23, 42, 0.35);
     }
 
     .header::before {
@@ -70,6 +72,8 @@
       display: flex;
       align-items: center;
       gap: 8px;
+      padding-top: 2px;
+      padding-bottom: 2px;
       z-index: 1;
     }
 
@@ -92,12 +96,12 @@
     }
 
     .header-title {
-      font-size: 20px;
+      font-size: 19px;
       font-weight: 600;
     }
 
     .card {
-      margin-top: -24px;
+      margin-top: 8px;
       background: #ffffff;
       border-radius: var(--radius-lg);
       padding: 20px 18px 24px;
