--- a/credencial.html
+++ b/credencial.html
@@ -103,12 +103,15 @@
 
     /* TARJETA */
 .card {
-      background: #fff;
-      margin-top: -10px; /* corregido */
-      border-radius: var(--radius);
-      padding: 22px 18px 26px;
-      text-align: center;
-      box-shadow: 0 12px 30px rgba(15,23,42,0.12);
+  background: #fff;
+  margin-top: -12px;      /* levanta un poco la card */
+  border-radius: var(--radius);
+  padding: 22px 18px 26px;
+  text-align: center;
+  box-shadow: 0 12px 30px rgba(15,23,42,0.12);
+
+  position: relative;     /* SOLUCIÓN */
+  z-index: 10;            /* SOLUCIÓN */
 }
 
 
