--- a/credencial.html
+++ b/credencial.html
@@ -279,14 +279,10 @@
       <button class="btn btn-secondary" type="button" onclick="history.back()">
         Volver
       </button>
-      <button class="btn btn-primary" type="button">
+      <button class="btn btn-primary" type="button" onclick="window.location.href='credencial-imprimir.pdf'">
         Descargar credencial
       </button>
     </div>
-
-    <button class="button-print" type="button" onclick="window.location.href='credencial-imprimir.pdf'">
-      Descargar versión para imprimir
-    </button>
 
   </main>
 </div>
