--- a/menu.html
+++ b/menu.html
@@ -42,7 +42,7 @@
       flex-direction: column;
     }
 
-    /* HEADER SALUD */
+    /* HEADER */
 
     .header {
       position: relative;
@@ -62,11 +62,9 @@
       border-radius: 50%;
       top: -75%;
       left: -40%;
-      background: radial-gradient(
-        circle at top,
-        rgba(255, 255, 255, 0.18),
-        transparent 60%
-      );
+      background: radial-gradient(circle at top,
+        rgba(255,255,255,0.18),
+        transparent 60%);
     }
 
     .header-top {
@@ -96,10 +94,6 @@
       cursor: pointer;
     }
 
-    .notif-bell span {
-      font-size: 17px;
-    }
-
     .notif-dot {
       position: absolute;
       top: -3px;
@@ -116,7 +110,7 @@
       border: 2px solid var(--blue-main);
     }
 
-    /* CONTENIDO PRINCIPAL */
+    /* CONTENIDO */
 
     .content {
       flex: 1;
@@ -149,7 +143,7 @@
     .menu-card {
       background: var(--card-bg);
       border-radius: 24px;
-      padding: 16px 12px 14px;
+      padding: 18px 10px 14px;
       box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
       text-align: center;
       text-decoration: none;
@@ -165,20 +159,19 @@
       box-shadow: 0 4px 10px rgba(15, 23, 42, 0.18);
     }
 
+    /* ICONOS SIN CÍRCULO */
+
     .menu-icon {
-      width: 52px;
-      height: 52px;
-      border-radius: 18px;
-      background: #f3f7ff;
+      margin-bottom: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-bottom: 10px;
+      height: 48px;
     }
 
     .menu-icon img {
-      width: 30px;
-      height: 30px;
+      width: 38px;
+      height: 38px;
       display: block;
     }
 
@@ -187,7 +180,7 @@
       font-weight: 600;
     }
 
-    /* BARRA INFERIOR */
+    /* NAV BOTTOM */
 
     .bottom-shell {
       margin-top: 24px;
@@ -219,7 +212,7 @@
     }
 
     .nav-btn.inactive {
-      opacity: 0.5;
+      opacity: 0.45;
     }
 
     .nav-plus {
@@ -241,15 +234,12 @@
       cursor: pointer;
     }
 
-    .nav-plus:active {
-      transform: translateX(-50%) translateY(1px);
-      box-shadow: 0 8px 16px rgba(37, 99, 235, 0.5);
-    }
   </style>
 </head>
+
 <body>
   <div class="app-shell">
-    <!-- HEADER -->
+
     <header class="header">
       <div class="header-top">
         <div class="header-title">Salud</div>
@@ -260,69 +250,64 @@
       </div>
     </header>
 
-    <!-- CONTENIDO -->
     <main class="content">
       <div class="section-title">Menú</div>
       <div class="section-subtitle">Bienvenido al cuidado de tu salud.</div>
 
       <div class="menu-grid">
-        <!-- Credencial -->
+
         <a href="credencial.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-credencial.png" alt="Credencial" />
+            <img src="icon-credencial.png" />
           </div>
           <div class="menu-label">Credencial</div>
         </a>
 
-        <!-- Prescripciones -->
         <a href="prescripciones.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-prescripciones.png" alt="Prescripciones" />
+            <img src="icon-prescripciones.png" />
           </div>
           <div class="menu-label">Prescripciones</div>
         </a>
 
-        <!-- Retiro de Medicamentos -->
         <a href="retiro-medicamentos.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-retiro-medicamentos.png" alt="Retiro de medicamentos" />
+            <img src="icon-retiro-medicamentos.png" />
           </div>
           <div class="menu-label">Retiro de Medicamentos</div>
         </a>
 
-        <!-- Turnos -->
         <a href="solicitar-turno.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-turnos.png" alt="Turnos" />
+            <img src="icon-turnos.png" />
           </div>
           <div class="menu-label">Turnos</div>
         </a>
 
-        <!-- Historia Clínica -->
         <a href="historia-salud.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-historia-clinica.png" alt="Historia clínica" />
+            <img src="icon-historia-clinica.png" />
           </div>
           <div class="menu-label">Historia Clínica</div>
         </a>
 
-        <!-- Mensajes -->
         <a href="mensajes.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-mensajes.png" alt="Mensajes" />
+            <img src="icon-mensajes.png" />
           </div>
           <div class="menu-label">Mensajes</div>
         </a>
+
       </div>
 
-      <!-- BARRA INFERIOR -->
       <div class="bottom-shell">
         <div class="bottom-nav">
-          <button class="nav-btn inactive" type="button">⌂</button>
-          <button class="nav-btn inactive" type="button">⚙</button>
+          <button class="nav-btn inactive">⌂</button>
+          <button class="nav-btn inactive">⚙</button>
         </div>
-        <button class="nav-plus" type="button">+</button>
+        <button class="nav-plus">+</button>
       </div>
+
     </main>
   </div>
 </body>
