--- a/menu.html
+++ b/menu.html
@@ -161,19 +161,20 @@
 
     /* ICONOS SIN CÍRCULO */
 
-    .menu-icon {
-      margin-bottom: 10px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 48px;
-    }
+.menu-card-icon {
+  width: 56px;           /* Tamaño universal del marco */
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
 
-    .menu-icon img {
-      width: 38px;
-      height: 38px;
-      display: block;
-    }
+.menu-card-icon img {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+}
 
     .menu-label {
       font-size: 14px;
