--- a/menu.html
+++ b/menu.html
@@ -140,46 +140,50 @@
       gap: 12px;
     }
 
-    .menu-card {
-      background: var(--card-bg);
-      border-radius: 24px;
-      padding: 18px 10px 14px;
-      box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
-      text-align: center;
-      text-decoration: none;
-      color: var(--text-main);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      transition: transform 0.12s ease-out, box-shadow 0.12s ease-out;
-    }
+/* Tarjetas del menú */
+.menu-card {
+  background: var(--card-bg);
+  border-radius: 24px;
+  padding: 18px 10px;
+  box-shadow: 0 8px 18px rgba(15, 23, 42, 0.12);
+  text-align: center;
+  text-decoration: none;
+  color: var(--text-main);
 
-    .menu-card:active {
-      transform: translateY(1px);
-      box-shadow: 0 4px 10px rgba(15, 23, 42, 0.18);
-    }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;   /* ← centra icono + texto verticalmente */
+  gap: 8px;                  /* separación pareja entre icono y texto */
+  transition: transform 0.12s ease-out, box-shadow 0.12s ease-out;
+}
 
-    /* ICONOS SIN CÍRCULO */
+.menu-card:active {
+  transform: translateY(1px);
+  box-shadow: 0 4px 10px rgba(15, 23, 42, 0.18);
+}
 
-.menu-card-icon {
-  width: 56px;           /* Tamaño universal del marco */
-  height: 56px;
+/* ICONO */
+.menu-icon {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
+  height: 48px;
+  margin-bottom: 0;          /* ya usamos gap en la card */
 }
 
-.menu-card-icon img {
-  max-width: 100%;
-  max-height: 100%;
+.menu-icon img {
+  width: 38px;
+  height: 38px;
   display: block;
 }
 
-    .menu-label {
-      font-size: 14px;
-      font-weight: 600;
-    }
+/* Texto debajo del icono */
+.menu-label {
+  margin: 0;                 /* sin margen extra raro */
+  font-size: 13px;
+}
+
 
     /* NAV BOTTOM */
 
