Refactor menu card icon styles
Removed specific margin adjustment for menu card icon and added styling for menu card icon images.

.menu-card-icon img {
  display: block;
  margin: 0 auto;
}

--- a/menu.html
+++ b/menu.html
@@ -159,9 +159,7 @@
   box-shadow: 0 4px 10px rgba(15, 23, 42, 0.18);
 }
     
-  #card-credencial .menu-card-icon {
-  margin-bottom: 6px;   /* ajuste puntual */
-}
+
 
 
 /* ICONOS SIN CÍRCULO */
@@ -183,6 +181,11 @@
 .menu-label {
   font-size: 14px;
   font-weight: 600;
+}
+
+    .menu-card-icon img {
+  display: block;
+  margin: 0 auto;
 }
 
 
