--- a/demo.html
+++ b/demo.html
@@ -116,7 +116,7 @@
           </a>
 
           <!-- Botón 2: Demo escaneo credencial (enfermero) -->
-          <a href="/demo-nivel2.html"
+          <a href="/random/demo-random.html"
              class="group relative inline-flex items-center justify-center gap-2 px-8 py-3 bg-white/95 hover:bg-white text-cura-primary font-medium text-sm md:text-base rounded-full transition-all duration-300 shadow-lg hover:shadow-white/30 hover:-translate-y-0.5 border border-cura-accent/30 w-full md:w-auto">
             <span>Ver demo escaneo de credencial · <strong>Rol Enfermero</strong></span>
             <svg xmlns="http://www.w3.org/2000/svg"
