Change background to linear gradient
Updated the background style to use a linear gradient.

--- a/menu.html
+++ b/menu.html
@@ -26,7 +26,8 @@
     body {
       margin: 0;
       padding: 0;
-      background: var(--bg-light);
+      /* background: var(--bg-light); */
+       background: linear-gradient(180deg, #cfe3ff 0%, #f4f6fb 45%, #f4f6fb 100%);
       display: flex;
       justify-content: center;
       align-items: flex-start;
