Change button text for code generation

--- a/retiro-medicamentos.html
+++ b/retiro-medicamentos.html
@@ -286,7 +286,7 @@
         </div>
 
         <div class="mini-actions">
-          <button class="mini-btn primary">Generar código sensible</button>
+          <button class="mini-btn primary">Generar código de retiro</button>
           <button class="mini-btn">Configurar privacidad</button>
         </div>
       </article>
