Update menu links and labels for notifications

--- a/menu.html
+++ b/menu.html
@@ -298,11 +298,11 @@
           <div class="menu-label">Historia Clínica</div>
         </a>
 
-        <a href="mensajes.html" class="menu-card">
+        <a href="notificaciones.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-mensajes.png" />
+            <img src="icon-notificaciones.png" />
           </div>
-          <div class="menu-label">Mensajes</div>
+          <div class="menu-label">Notificaciones</div>
         </a>
 
       </div>
