--- a/menu.html
+++ b/menu.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Salud - C.U.R.A.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <style>
     :root {
       --blue-dark: #0d3662;
