Update navigation button styles and links

--- a/menu.html
+++ b/menu.html
@@ -204,19 +204,24 @@
       box-shadow: 0 12px 26px rgba(15, 23, 42, 0.25);
     }
 
-    .nav-btn {
-      width: 32px;
-      height: 32px;
-      border-radius: 50%;
-      border: none;
-      background: transparent;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-      font-size: 18px;
-      color: var(--blue-dark);
-    }
+  .nav-btn {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: transparent;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.nav-icon {
+  width: 26px;     /* tamaño del ícono */
+  height: 26px;
+  stroke: #0d3662;
+}
+
 
     .nav-btn.inactive {
       opacity: 0.45;
@@ -298,11 +303,11 @@
           <div class="menu-label">Historia Clínica</div>
         </a>
 
-        <a href="notificaciones.html" class="menu-card">
+        <a href="recordatorios.html" class="menu-card">
           <div class="menu-icon">
-            <img src="icon-notificaciones.png" />
+            <img src="icon-recordatorios.png" />
           </div>
-          <div class="menu-label">Notificaciones</div>
+          <div class="menu-label">Recordatorios</div>
         </a>
 
       </div>
