--- a/menu.html
+++ b/menu.html
@@ -312,13 +312,38 @@
 
       </div>
 
-      <div class="bottom-shell">
-        <div class="bottom-nav">
-          <button class="nav-btn inactive">⌂</button>
-          <button class="nav-btn inactive">⚙</button>
-        </div>
-        <button class="nav-plus">+</button>
-      </div>
+   <div class="bottom-shell">
+  <div class="bottom-nav">
+    <button class="nav-btn inactive">
+      <svg class="nav-icon" viewBox="0 0 24 24">
+        <path d="M3 10.5L12 3l9 7.5"></path>
+        <path d="M5 10v10h14V10"></path>
+      </svg>
+    </button>
+
+    <button class="nav-btn inactive">
+      <svg class="nav-icon" viewBox="0 0 24 24">
+        <circle cx="12" cy="12" r="3"></circle>
+        <path d="M19.4 15a1.6 1.6 0 0 0 .3 1.7l.1.1a2 2 0 1 1-2.8 2.8l-.1-.1a1.6 1.6 0 0 0-1.7-.3
+                 1.6 1.6 0 0 0-1 1.5V21a2 2 0 1 1-4 0v-.1
+                 a1.6 1.6 0 0 0-1-1.5 1.6 1.6 0 0 0-1.7.3l-.1.1
+                 a2 2 0 1 1-2.8-2.8l.1-.1a1.6 1.6 0 0 0 .3-1.7
+                 1.6 1.6 0 0 0-1.5-1H3a2 2 0 1 1 0-4h.1
+                 a1.6 1.6 0 0 0 1.5-1 1.6 1.6 0 0 0-.3-1.7l-.1-.1
+                 a2 2 0 1 1 2.8-2.8l.1.1a1.6 1.6 0 0 0 1.7.3
+                 1.6 1.6 0 0 0 1-1.5V3a2 2 0 1 1 4 0v.1
+                 a1.6 1.6 0 0 0 1 1.5 1.6 1.6 0 0 0 1.7-.3l.1-.1
+                 a2 2 0 1 1 2.8 2.8l-.1.1a1.6 1.6 0 0 0-.3 1.7
+                 1.6 1.6 0 0 0 1.5 1H21a2 2 0 1 1 0 4h-.1
+                 a1.6 1.6 0 0 0-1.5 1z"></path>
+      </svg>
+    </button>
+  </div>
+      <button class="nav-plus">+</button>
+</div>
+
+       
+  
 
     </main>
   </div>
