--- a/menu.html
+++ b/menu.html
@@ -245,6 +245,7 @@
       justify-content: center;
       box-shadow: 0 12px 26px rgba(37, 99, 235, 0.55);
       cursor: pointer;
+      line-height: 1;
     }
   </style>
 </head>
