--- a/menu.html
+++ b/menu.html
@@ -246,6 +246,7 @@
       box-shadow: 0 12px 26px rgba(37, 99, 235, 0.55);
       cursor: pointer;
       line-height: 1;
+        padding-top: 3px;
     }
   </style>
 </head>
