--- a/menu.html
+++ b/menu.html
@@ -245,8 +245,9 @@
       justify-content: center;
       box-shadow: 0 12px 26px rgba(37, 99, 235, 0.55);
       cursor: pointer;
-      line-height: 1;
-        padding-top: 3px;
+ line-height: 1;
+  padding-top: 4px;
+  padding-left: 0.5px; /* opcional, casi imperceptible */
     }
   </style>
 </head>
