--- a/index.html
+++ b/index.html
@@ -547,7 +547,8 @@
   <h3 class="text-sm font-semibold text-white mb-1">Tenemos novedades</h3>
   <p class="text-xs text-cura-accentLight leading-snug">
     La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>
-    en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.
+    en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.<br>
+   <strong> Un documento de 90 páginas que propone una transformación histórica del sistema de salud.</strong>strong>
   </p>
 </section>
 
@@ -606,8 +607,8 @@ document.addEventListener('DOMContentLoaded', function () {
   const bannerTextEl = document.getElementById('top-banner-text');
   if (bannerTextEl) {
     const bannerMessages = [
-      'La ley se encuentra en revisión técnica y estará disponible próximamente en la web.',
-      'La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.'
+      'La ley se encuentra en su etapa final de revisión técnica y estará disponible próximamente en la web.',
+      'La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas. 90 páginas de transformación histórica de la Salud.'
     ];
 
     let bannerIndex = 0;
