--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
             
             <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
                 <h3 class="text-sm font-semibold text-white mb-1">Tu DNI de salud</h3>
-                <p class="text-xs text-cura-accentLight">Funciona como un <strong>documento único que unifica tu historia clínica</strong> del sector público, privado y obras sociales.</p>
+                <p class="text-xs text-cura-accentLight">Funciona como un documento único que unifica tu historia clínica</strong> del sector público, privado y obras sociales.</p>
             </div>
             <div class="bg-cura-card rounded-xl border border-cura-accent/40 p-4 shadow-md transition hover:-translate-y-1 hover:border-cura-accent/70">
                 <h3 class="text-sm font-semibold text-white mb-1">Seguridad y privacidad</h3>
@@ -548,7 +548,7 @@
   <p class="text-xs text-cura-accentLight leading-snug">
     La ley será presentada por primera vez del 28 al 30 de abril de 2026<br>
     en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas.<br>
-   <strong> Un documento de 90 páginas que propone una transformación histórica del sistema de salud.</strong>strong>
+   <strong> Un documento de 90 páginas que propone una transformación histórica del sistema de salud.</strong>
   </p>
 </section>
 
