--- a/Informacion/recursos.html
+++ b/Informacion/recursos.html
@@ -99,7 +99,7 @@
   <main class="flex-grow w-full px-4 py-10 space-y-12 flex flex-col items-center">
     
     <section class="w-full max-w-4xl mx-auto">
-        <h1 class="text-3xl font-bold text-white mb-8 text-center">Beneficios para Pacientes y Profesionales</h1>
+        <h1 class="text-3xl font-bold text-white mb-8 text-center">Recursos</h1>
         
         <div class="w-full flex justify-center">
             <div class="block w-full bg-cura-card rounded-xl border border-cura-accent/40 p-8 shadow-md hover:border-cura-accent transition-all duration-300 hover:shadow-lg min-h-[450px] flex flex-col justify-between relative overflow-hidden">
