--- a/Informacion/recursos.html
+++ b/Informacion/recursos.html
@@ -107,17 +107,19 @@
                 <div class="absolute -top-10 -right-10 w-32 h-32 bg-cura-accent/10 rounded-full blur-2xl pointer-events-none"></div>
 
                 <p id="typewriter-text" class="whitespace-pre-wrap text-sm md:text-base text-white leading-relaxed cursor-blink mb-8">
-El Sistema C.U.R.A. pone a disposición una biblioteca completa de documentos oficiales, materiales técnicos y recursos abiertos para que profesionales, instituciones, desarrolladores, periodistas, estudiantes y ciudadanos puedan comprender, auditar y utilizar correctamente la plataforma.
+El Sistema C.U.R.A. tiene como objetivo poner a disposición una biblioteca completa de documentos oficiales, materiales técnicos y recursos abiertos para que profesionales, instituciones, desarrolladores y ciudadanos puedan comprender y auditar la plataforma.
 
-En esta sección se pueden descargar la Ley C.U.R.A. completa, sus versiones consolidadas, los documentos técnicos de interoperabilidad, los estándares vigentes, protocolos de seguridad, manuales para profesionales de la salud, guías de uso de la credencial digital, informes de auditoría, capacitaciones, presentaciones oficiales y materiales de difusión.
+ACTUALMENTE DISPONIBLE:
+Ponemos a disposición de la comunidad el Resumen Ejecutivo del proyecto para su descarga inmediata, análisis y difusión.
 
-El repositorio incluye además APIs y documentación técnica para desarrolladores, especificaciones HL7 FHIR, esquemas de integración, catálogos interoperables, definiciones SNOMED CT, nomencladores federales y el índice público de interoperabilidad. Todo el material se encuentra en formato abierto para facilitar la integración de sistemas provinciales, obras sociales, PAMI, ART y prestadores privados.
+PRÓXIMAMENTE:
+A medida que avance la iniciativa legislativa, en esta sección se podrá descargar la Ley C.U.R.A. completa, sus versiones consolidadas, los documentos técnicos de interoperabilidad, los estándares vigentes y los protocolos de seguridad.
 
-Los ciudadanos pueden acceder a guías simples sobre sus derechos, privacidad, protección de datos, trazabilidad, acceso a la historia clínica, Panel de Privacidad, credencial de emergencia y pasos para utilizar C.U.R.A. desde el celular.
+El repositorio futuro incluirá APIs y documentación técnica para desarrolladores, especificaciones HL7 FHIR, definiciones SNOMED CT y el índice público de interoperabilidad, facilitando la integración de sistemas provinciales y obras sociales.
 
-También se incluyen recursos institucionales como logos oficiales, plantillas, infografías, kits de prensa, presentaciones, esquemas explicativos, versiones imprimibles de documentos, módulos de capacitación, simuladores, instructivos de recetas electrónicas y manuales de carga para laboratorios, farmacias, hospitales y consultorios.
+Asimismo, los ciudadanos podrán acceder a guías simples sobre sus derechos, privacidad y uso de la credencial digital, mientras que las instituciones contarán con manuales de carga y módulos de capacitación.
 
-Todos estos materiales están en constante actualización y se publican con transparencia en formatos abiertos, garantizando acceso público, auditoría ciudadana e integración técnica de todo el ecosistema sanitario.
+Todo el material se irá publicando con transparencia en formatos abiertos, garantizando el acceso público y la auditoría ciudadana del ecosistema sanitario.
                 </p>
 
                 <div class="mt-4 flex justify-center animate-fade-in-up">
