--- a/Informacion/informacion.html
+++ b/Informacion/informacion.html
@@ -85,9 +85,9 @@
         <a href="#sumate" class="text-cura-accentLight hover:text-white transition-colors uppercase font-bold nav-scroll-link">
             Sumate
         </a>
-        <a href="/random/demo-random.html"
+        <a href="/demo.html"
            class="inline-flex items-center gap-1 text-cura-primary bg-cura-accent rounded-full px-3 py-1 text-xs font-semibold hover:bg-white transition">
-          Demo Enfermero
+          Demostración
         </a>
       </nav>
     </div>
