--- a/demo.html
+++ b/demo.html
@@ -58,7 +58,7 @@
   <!-- Banner superior -->
   <div id="top-banner" class="w-full bg-yellow-50 text-center text-xs text-yellow-900 py-2 px-4">
     <span id="top-banner-text">
-      La ley se encuentra en revisión técnica y estará disponible próximamente en la web.
+     La ley se encuentra en su etapa final de revisión técnica y estará disponible próximamente en la web.
     </span>
   </div>
 
