--- a/menu.html
+++ b/menu.html
@@ -208,15 +208,24 @@
         gap: 12px;
     }
 
+/* Busca la clase .qr-box-light y agrega el estilo para la imagen img */
     .qr-box-light {
         background: rgba(255,255,255,0.6);
-        padding: 8px;
+        padding: 5px; /* Un poco menos de padding para que el QR sea más grande */
         border-radius: 12px;
         width: 70px;
         height: 70px;
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    /* ESTO ES LO NUEVO: Para que tu imagen PNG se vea bien */
+    .qr-box-light img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain; /* Esto evita que el QR se corte o estire */
+        display: block;
     }
     /* Placeholder visual para el QR */
     .qr-svg-placeholder { width: 100%; height: 100%; fill: #4a5568; opacity: 0.7; }
@@ -358,10 +367,10 @@
                     <p>CURAID-01-41316202</p>
                 </div>
             </div>
-            
-            <div class="cred-right-actions">
+          
+    <div class="cred-right-actions">
                 <div class="qr-box-light">
-                    <svg class="qr-svg-placeholder" viewBox="0 0 24 24"><path d="M3 3h6v6H3V3zm2 2v2h2V5H5zm8-2h6v6h-6V3zm2 2v2h2V5h-2zM3 13h6v6H3v-6zm2 2v2h2v-2H5zm13-2h3v2h-3v-2zm-3 2h2v2h-2v-2zm3 3h3v2h-3v-2zm-6 0h2v2h-2v-2zm3 3h3v2h-3v-2zm-3-3h2v3h-2v-3zm-3 0h3v3h-3v-3z"/></svg>
+                    <img src="qr_menu.png" alt="QR Código" />
                 </div>
                 <button class="btn-ver-light">Ver credencial</button>
             </div>
