--- a/menu.html
+++ b/menu.html
@@ -67,7 +67,7 @@
     .greeting-text { font-size: 28px; font-weight: 800; color: var(--text-dark); margin-bottom: 4px; }
     .greeting-sub { font-size: 16px; color: var(--text-gray); margin-bottom: 24px; }
 
-    /* --- CREDENCIAL CELESTE (RESTAURADA) --- */
+    /* --- CREDENCIAL CELESTE --- */
     .credencial-card-light {
         display: block;
         text-decoration: none;
@@ -157,7 +157,7 @@
         border: none;
     }
 
-    /* --- GRID MENÚ (ORIGINAL MENU 10) --- */
+    /* --- GRID MENÚ --- */
     .menu-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -204,38 +204,53 @@
       justify-content: center;
     }
 
-    /* --- NAV INFERIOR (ORIGINAL MENU 10) --- */
+    /* --- NAV INFERIOR MODIFICADA --- */
     .bottom-bar {
       position: fixed;
-      bottom: 20px;
+      bottom: 24px;
       left: 50%;
       transform: translateX(-50%);
       width: 90%;
-      max-width: 370px;
+      max-width: 360px;
       background: #ffffff;
       border-radius: 35px;
       height: 70px;
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      padding: 0 30px;
+      justify-content: space-between;
+      padding: 0 25px;
       box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.05);
+      z-index: 50;
     }
 
-    .center-btn {
-      width: 60px;
-      height: 60px;
+    .nav-icon-btn {
+      background: none;
+      border: none;
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    .nav-icon-btn svg {
+      width: 26px;
+      height: 26px;
+      fill: var(--text-dark);
+    }
+
+    .center-question-btn {
+      width: 64px;
+      height: 64px;
       background: #0066cc;
       border-radius: 50%;
-      border: 5px solid var(--main-bg);
-      color: white;
-      font-size: 30px;
-      font-weight: bold;
+      border: 5px solid var(--main-bg); 
       display: flex;
       align-items: center;
       justify-content: center;
-      margin-top: -45px;
-      box-shadow: 0 8px 15px rgba(0, 102, 204, 0.3);
+      color: white;
+      font-size: 32px;
+      font-weight: 600;
+      margin-top: -35px; 
+      box-shadow: 0 8px 20px rgba(0, 102, 204, 0.3);
+      cursor: pointer;
     }
   </style>
 </head>
@@ -300,11 +315,17 @@
       </div>
     </main>
 
-    <nav class="bottom-bar">
-      <div style="font-size:24px">🏠</div>
-      <div class="center-btn">?</div>
-      <div style="font-size:24px">⚙️</div>
-    </nav>
+    <div class="bottom-bar">
+      <button class="nav-icon-btn">
+        <svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+      </button>
+      
+      <div class="center-question-btn">?</div>
+      
+      <button class="nav-icon-btn">
+        <svg viewBox="0 0 24 24"><path d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z"/></svg>
+      </button>
+    </div>
   </div>
 
 </body>
