--- a/menu.html
+++ b/menu.html
@@ -289,27 +289,27 @@
 
       <div class="menu-grid">
         <a href="#" class="menu-item">
-          <div class="icon-circle"><img src="prescripciones.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-prescripciones.png" alt="Icon"></div>
           <span class="menu-text">Prescripciones</span>
         </a>
         <a href="#" class="menu-item">
-          <div class="icon-circle"><img src="retiro.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-retiro-medicamentos.png" alt="Icon"></div>
           <span class="menu-text">Retiro de Medicamentos</span>
         </a>
         <a href="#" class="menu-item">
-          <div class="icon-circle"><img src="turnos.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-turnos.png" alt="Icon"></div>
           <span class="menu-text">Turnos</span>
         </a>
         <a href="#" class="menu-item">
-          <div class="icon-circle"><img src="historia.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-historia-clinica.png" alt="Icon"></div>
           <span class="menu-text">Historia Clínica</span>
         </a>
         <a href="#" class="menu-item">
-          <div class="icon-circle"><img src="recordatorios.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-recordatorios.png" alt="Icon"></div>
           <span class="menu-text">Recordatorios</span>
         </a>
         <a href="#" class="menu-item">
-          <div class="icon-circle"><img src="cartilla.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-mapa.png" alt="Icon"></div>
           <span class="menu-text">Cartilla</span>
         </a>
       </div>
