--- a/menu.html
+++ b/menu.html
@@ -288,27 +288,27 @@
       </a>
 
       <div class="menu-grid">
-        <a href="#" class="menu-item">
+        <a href="prescripciones.html" class="menu-item">
           <div class="icon-circle"><img src="icon-prescripciones.png" alt="Icon"></div>
           <span class="menu-text">Prescripciones</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="retiro-medicamentos.html" class="menu-item">
           <div class="icon-circle"><img src="icon-retiro-medicamentos.png" alt="Icon"></div>
           <span class="menu-text">Retiro de Medicamentos</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="solicitar-turno.html" class="menu-item">
           <div class="icon-circle"><img src="icon-turnos.png" alt="Icon"></div>
           <span class="menu-text">Turnos</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="historia-salud.html" class="menu-item">
           <div class="icon-circle"><img src="icon-historia-clinica.png" alt="Icon"></div>
           <span class="menu-text">Historia Clínica</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href=recordatorios.html#" class="menu-item">
           <div class="icon-circle"><img src="icon-recordatorios.png" alt="Icon"></div>
           <span class="menu-text">Recordatorios</span>
         </a>
-        <a href="#" class="menu-item">
+        <a href="cartilla.html" class="menu-item">
           <div class="icon-circle"><img src="icon-mapa.png" alt="Icon"></div>
           <span class="menu-text">Cartilla</span>
         </a>
