--- a/menu.html
+++ b/menu.html
@@ -293,11 +293,11 @@
           <span class="menu-text">Prescripciones</span>
         </a>
         <a href="retiro-medicamentos.html" class="menu-item">
-          <div class="icon-circle"><img src="icon-retiro-medicamentos.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-retiro-medicamentos (2).png" alt="Icon"></div>
           <span class="menu-text">Retiro de Medicamentos</span>
         </a>
         <a href="solicitar-turno.html" class="menu-item">
-          <div class="icon-circle"><img src="icon-turnos.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-turnos (2).png" alt="Icon"></div>
           <span class="menu-text">Turnos</span>
         </a>
         <a href="historia-salud.html" class="menu-item">
@@ -305,7 +305,7 @@
           <span class="menu-text">Historia Clínica</span>
         </a>
         <a href=recordatorios.html#" class="menu-item">
-          <div class="icon-circle"><img src="icon-recordatorios.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-recordatorios (2).png" alt="Icon"></div>
           <span class="menu-text">Recordatorios</span>
         </a>
         <a href="cartilla.html" class="menu-item">
