--- a/menu.html
+++ b/menu.html
@@ -289,7 +289,7 @@
 
       <div class="menu-grid">
         <a href="prescripciones.html" class="menu-item">
-          <div class="icon-circle"><img src="icon-prescripciones.png" alt="Icon"></div>
+          <div class="icon-circle"><img src="icon-prescripciones (2).png" alt="Icon"></div>
           <span class="menu-text">Prescripciones</span>
         </a>
         <a href="retiro-medicamentos.html" class="menu-item">
