--- a/menu.html
+++ b/menu.html
@@ -304,7 +304,7 @@
           <div class="icon-circle"><img src="icon-historia-clinica.png" alt="Icon"></div>
           <span class="menu-text">Historia Clínica</span>
         </a>
-        <a href=recordatorios.html" class="menu-item">
+        <a href="recordatorios.html" class="menu-item">
           <div class="icon-circle"><img src="icon-recordatorios (2).png" alt="Icon"></div>
           <span class="menu-text">Recordatorios</span>
         </a>
