--- a/retiro-medicamentos.html
+++ b/retiro-medicamentos.html
@@ -267,7 +267,7 @@
         </div>
 
         <div class="mini-actions">
-          <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Generar código de retiro</button>
+          <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Retirar restantes</button>
           <button class="mini-btn">Ver receta</button>
         </div>
       </article>
@@ -313,7 +313,7 @@
         </div>
 
         <div class="mini-actions">
-          <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Generar código de retiro</button>
+          <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Retirar restantes</button>
           <button class="mini-btn">Configurar privacidad</button>
         </div>
       </article>
