--- a/retiro-medicamentos.html
+++ b/retiro-medicamentos.html
@@ -314,7 +314,7 @@
 
         <div class="mini-actions">
           <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Retirar restantes</button>
-          <button class="mini-btn">Configurar privacidad</button>
+          <button class="mini-btn">Ver receta</button>
         </div>
       </article>
 
