--- a/retiro-medicamentos.html
+++ b/retiro-medicamentos.html
@@ -267,7 +267,7 @@
         </div>
 
         <div class="mini-actions">
-          <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Retirar restantes</button>
+          <button class="mini-btn primary" onclick="window.location.href='credencial.html'">Retirar medicamento</button>
           <button class="mini-btn">Ver receta</button>
         </div>
       </article>
@@ -303,7 +303,7 @@
         </div>
 
         <div class="rx-meta">
-          Tratamiento psiquiátrico · Requiere presentación de DNI  
+          Tratamiento psiquiátrico  
           Disponible: 30 comprimidos · Vence: 18/04/2025
         </div>
 
