--- a/index.html
+++ b/index.html
@@ -611,7 +611,8 @@ document.addEventListener('DOMContentLoaded', function () {
   if (bannerTextEl) {
     const bannerMessages = [
       'La ley se encuentra en su etapa final de revisión técnica y estará disponible próximamente en la web.',
-      'La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas. 90 páginas de transformación histórica de la Salud.'
+      'La ley será presentada por primera vez del 28 al 30 de abril de 2026 en el V Congreso Internacional sobre Transformaciones en las Administraciones Públicas. 90 páginas de transformación histórica de la Salud.',
+      "Ya se encuentra disponible para descargar el Resumen Ejecutivo"
     ];
 
     let bannerIndex = 0;
