--- a/index.html
+++ b/index.html
@@ -166,6 +166,31 @@
       position: absolute; bottom: 23%; left: 0; right: -3%; text-align: center;
       font-family: 'Open Sans', sans-serif; font-weight: 400; font-size: 2.8cqw; letter-spacing: 0.05em;
   }
+
+  .btn-resumen-ejecutivo {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    padding: 10px 20px;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: #e2e8f0;
+    border-radius: 9999px;
+    font-size: 0.875rem;
+    font-weight: 600;
+    text-decoration: none;
+    border: 1px dashed rgba(255, 255, 255, 0.3);
+    transition: all 0.3s ease;
+}
+
+.btn-resumen-ejecutivo:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: #ffffff;
+    border-style: solid;
+    border-color: #ffffff;
+    transform: translateY(-1px);
+}
+  
 </style>
 
 </head>
